# Aquaswap

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  REPORT.md  SECURITY.md  WALLET_INTEGRATION.md  deployment.json  make_commits.sh
.github/workflows/: ci.yml  deploy.yml
apps/web/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
config/: testnet.json
contracts/: README.md
contracts/factory/: Cargo.toml
contracts/integration/: Cargo.toml
contracts/integration/tests/: common.rs  test_pair.rs
contracts/pair/: Cargo.toml
contracts/router/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRD.md  ROADMAP.md  SECURITY.md  TESTING.md  analytics.md  mobile-testing.md  monitoring.md
docs/screenshots/: README.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/components/: TokenIcon.tsx  floating-lines.tsx  hero-header.tsx
frontend/lib/: amm-math.ts  balances.ts  pools.ts  soroban.ts  trustline.ts
frontend/scripts/: sync-config.mjs
indexer/: package-lock.json  package.json  tsconfig.json
indexer/src/: horizon.ts  index.ts
infra/docker/: docker-compose.yml
infra/postgres/: init.sql
scripts/: deploy.sh
scripts/deploy/: deploy_all.sh  deploy_real_tokens.sh
scripts/testing/: README.md  package.json  simulate-users.mjs
sdk/typescript/: package-lock.json  package.json
(+37 files in other folders)
